@@ -9,6 +9,8 @@ encrypting or decrypting in ECB or CBC mode.
 
 Added support for CFB, CFB8 and OFB modes to cipher streams.
 
+Added the GMAC authentication code.
+
 * Version 0.42, released 2018-08-09
 
 ** bug fixes
